minimal-api-and-blazor #19 autentication with Keycloak, no authorization

--- a/BlazorApp/wwwroot/index.html
+++ b/BlazorApp/wwwroot/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material.css">
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
 </head>
 
 <body>
